advanced/ingress/deployment-nginx-hw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw-nginx
  template:
    metadata:
      labels:
        app: hw-nginx
    spec:
      containers:
      - name: hw-nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-html
        configMap:
          name: hw-nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: hw-nginx-service
spec:
  selector:
    app: hw-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
