advanced/ingress/ingress.yaml
# minikube addons enable ingress
# Instala ingress controller de nginx lo cual actúa de load balancer
# Los request que vayan a nginx.example.com/test se redirigen a nginx-service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  #namespace: my-app
  annotations:
    kubernetes.io/ingress.class: "nginx" # Specify the ingress controller to use
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.example.com # Replace with your domain name
    http:
      paths:
      - path: /test/app1
        pathType: Prefix
        backend:
          service:
            name: nginx-service # The Service exposing the app
            port:
              number: 80
      - path: /test/app2
        pathType: Prefix
        backend:
          service:
            name: hw-nginx-service # The Service exposing the app
            port:
              number: 80
  # - host: argentina.com
  #   http:
  #     paths:
  #     - path: /test/app2
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: hw-nginx-service # The Service exposing the app
  #           port:
  #             number: 80
